# HISTORY_PROBLEM_BUILDER

./: .env  .env.example  PLAN.md  README.md  pyproject.toml  readme  requirements.txt
.claude/: settings.local.json
data/event/: dropped_events_2026-05-01_to_2026-05-10.jsonl  dropped_events_2026-05-01_to_2026-05-15.jsonl  events_2026-05-01_to_2026-05-10.csv  events_2026-05-01_to_2026-05-10.jsonl  events_2026-05-01_to_2026-05-15.csv  events_2026-05-01_to_2026-05-15.jsonl
data/questions/: question_candidates_2026-05-01_to_2026-05-10.csv  question_candidates_2026-05-01_to_2026-05-10.jsonl  question_candidates_2026-05-01_to_2026-05-10_zh_review.md  question_candidates_2026-05-01_to_2026-05-15.csv  question_candidates_2026-05-01_to_2026-05-15.jsonl  question_candidates_2026-05-01_to_2026-05-15_zh.md  rejected_question_candidates_2026-05-01_to_2026-05-10.jsonl  rejected_question_candidates_2026-05-01_to_2026-05-15.jsonl  rejected_question_candidates_2026-05-01_to_2026-05-15_zh.md
data/questions/verification/: question_candidates_2026-05-01_to_2026-05-10.csv  question_candidates_2026-05-01_to_2026-05-10.jsonl  rejected_question_candidates_2026-05-01_to_2026-05-10.jsonl
files/: log.md  prompt.md  网站选取.md  问题构建思路.md  项目结构.md
src/history_question_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/history_question_builder/event_crawler/: __init__.py  cli.py  config.py  filters.py  http_client.py  models.py  storage.py  utils.py
src/history_question_builder/question_asker/: __init__.py  agent.py  models.py  (+4 more)
tests/: test_question_pipeline.py
(+10 files in other folders)
